--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -11,10 +11,10 @@
                     <a class="nav-link active" aria-current="page" routerLink="home" routerLinkActive="active">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="precios" routerLinkActive="active">Precios</a>
+                    <a class="nav-link active" aria-current="page" routerLink="rutas" routerLinkActive="active">Rutas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="protegida" routerLinkActive="active">Protected</a>
+                    <a class="nav-link active" aria-current="page" routerLink="protegida" routerLinkActive="active">Buscar Rutas</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
